Fix color contrasts in light mode for a11y

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -5,7 +5,7 @@ body {
 }
 
 a {
-  color: $c-brand-bright;
+  color: $c-brand;
   text-decoration: none;
   &:active, &:hover {
     text-decoration: underline;
