--- a/src/styles/_darkmode.scss
+++ b/src/styles/_darkmode.scss
@@ -3,7 +3,13 @@
     background-color: #333639;
     color: #fff;
   }
+  a {
+    color: $c-brand-bright;
+  }
   .Footer {
     background-color: #232629;
+    a {
+      color: $c-brand-bright;
+    }
   }
 }
